crates/toml/tests/snapshots/invalid/string/bad-hex-esc-02.stderr
TOML parse error at line 1, column 21
  |
1 | bad-hex-esc-02 = "\xG0"
  |                     ^
too few unicode value digits, expected unicode hexadecimal value
